exports[`test ConsoleReporter.activity 1`] = `
Object {
  "stderr": "[2K[1G⠁ [2K[1G",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.command 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G$ foobar",
}
`;

exports[`test ConsoleReporter.error 1`] = `
Object {
  "stderr": "[2K[1Gerror foobar",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.footer 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G✨  Done in 0.00s.",
}
`;

exports[`test ConsoleReporter.footer 2`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G✨  Done in 0.00s. Peak memory usage 0.00MB.",
}
`;

exports[`test ConsoleReporter.header 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1Gyarn foobar v0.0.0",
}
`;

exports[`test ConsoleReporter.info 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1Ginfo foobar",
}
`;

exports[`test ConsoleReporter.log 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1Gfoobar",
}
`;

exports[`test ConsoleReporter.progress 1`] = `
Object {
  "stderr": "[2K[1G[1G░░ 0/2[1G█░ 1/2[2K[1G",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.progress 2`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.progress 3`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.select 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1Ginfo Ayo?
[2K[1G  1) foo
[2K[1G  2) bar
[1G[0JSelect one: [13G1",
}
`;

exports[`test ConsoleReporter.step 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[1/5] foboar...",
}
`;

exports[`test ConsoleReporter.success 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1Gsuccess foobar",
}
`;

exports[`test ConsoleReporter.warn 1`] = `
Object {
  "stderr": "[2K[1Gwarning foobar",
  "stdout": "",
}
`;
